--- a/GestaoPetShop/GestaoPetShop/Properties/Settings.settings
+++ b/GestaoPetShop/GestaoPetShop/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=DESKTOP-77AVU0J\SQLEXPRESS;Initial Catalog=petshop;User ID=sa;Password=admin123</Value>
     </Setting>
+    <Setting Name="modelagemConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-77AVU0J\SQLEXPRESS;Initial Catalog=modelagem;User ID=SA;Password=admin123&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=DESKTOP-77AVU0J\SQLEXPRESS;Initial Catalog=modelagem;User ID=SA;Password=admin123</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
