--- a/GestaoPetShop/Models/packages.config
+++ b/GestaoPetShop/Models/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Bunifu.Licensing" version="5.0.0" targetFramework="net472" />
+  <package id="Bunifu.UI.WinForms" version="6.1.0" targetFramework="net472" />
+  <package id="Bunifu.UI.WinForms.1.5.3" version="1.0.0" targetFramework="net472" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
   <package id="Fody" version="4.0.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Guna.UI2.WinForms" version="2.0.4.4" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.SystemEvents" version="6.0.0" targetFramework="net472" />
